--- a/src/test.ipynb
+++ b/src/test.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "source": [
     "import os\n",
     "# import sys\n",
@@ -30,10 +30,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 26,
    "source": [
     "from simulation_controller import SimulationController\n",
-    "from scene_generator import SceneGenerator, ColorMap"
+    "from scene_generator import SceneGenerator, ColorMap\n",
+    "from launchfile_maker import LaunchFileMaker"
    ],
    "outputs": [],
    "metadata": {}
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "source": [
     "cwd = os.getcwd()"
    ],
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "source": [
     "rospack = rospkg.RosPack()\n",
     "package_path = rospack.get_path('stonefish_scene_generator')"
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "source": [
     "all_files_path = os.path.join(package_path,'*')\n",
     "for file_name in glob.glob(all_files_path):\n",
@@ -98,10 +99,12 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "/home/zeged/catkin_ws/src/stonefish_scene_generator/launch\n",
-      "/home/zeged/catkin_ws/src/stonefish_scene_generator/src\n",
-      "/home/zeged/catkin_ws/src/stonefish_scene_generator/package.xml\n",
-      "/home/zeged/catkin_ws/src/stonefish_scene_generator/CMakeLists.txt\n"
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/package.xml\n",
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/launch\n",
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/data\n",
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/src\n",
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/include\n",
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/CMakeLists.txt\n"
      ]
     }
    ],
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "source": [
     "data_folder_path = os.path.join(package_path, 'data')\n",
     "dir_exists = os.path.isdir(data_folder_path)\n",
@@ -143,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "source": [
     "title = 'basic'\n",
     "seabed_depth = 15\n",
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "source": [
     "scene_file_path = os.path.join(data_folder_path, title + '.scn')\n",
     "f = open(scene_file_path, \"w\")\n",
@@ -185,61 +188,24 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### setup"
+    "### get launch_file_path"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "source": [
-    "controller = SimulationController()"
+    "launch_file_name = 'auto_generated.launch'\n",
+    "launch_file_path = os.path.join(package_path, 'launch', launch_file_name)\n",
+    "print(launch_file_path)"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "... logging to /home/zeged/.ros/log/04b7be32-2563-11ec-95d3-107b448dffed/roslaunch-zeged-System-Product-Name-343.log\n",
-      "\u001b[1mstarted roslaunch server http://zeged-System-Product-Name:43139/\u001b[0m\n",
-      "\n",
-      "SUMMARY\n",
-      "========\n",
-      "\n",
-      "PARAMETERS\n",
-      " * /rosdistro: melodic\n",
-      " * /rosversion: 1.14.11\n",
-      "\n",
-      "NODES\n",
-      "  /\n",
-      "    rosbag_record_cam (rosbag/record)\n",
-      "    rviz (rviz/rviz)\n",
-      "    stonefish_simulator (stonefish_ros/parsed_simulator)\n",
-      "\n",
-      "\u001b[1mROS_MASTER_URI=http://localhost:11311\u001b[0m\n",
-      "\u001b[1mprocess[stonefish_simulator-34]: started with pid [5226]\u001b[0m\n",
-      "\u001b[1mprocess[rviz-35]: started with pid [5227]\u001b[0m\n",
-      "\u001b[1mprocess[rosbag_record_cam-36]: started with pid [5233]\u001b[0m\n",
-      "[INFO] [1633551077.337669]: started\n",
-      "[rosbag_record_cam-36] killing on exit\n",
-      "[rviz-35] killing on exit\n",
-      "[stonefish_simulator-34] killing on exit\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-50-beb20a1348a4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mcontroller\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSimulationController\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mcontroller\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mcontroller\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_ros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/zeged/catkin_ws/src/stonefish_scene_generator/src/simulation_controller.py\u001b[0m in \u001b[0;36mwait_for_ros\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     76\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m         \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mrospy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mis_shutdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 78\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimer\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     79\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0mrospy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_time\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtimer\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m                     \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/ros/melodic/lib/python2.7/dist-packages/roslaunch/parent.pyc\u001b[0m in \u001b[0;36mshutdown\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    335\u001b[0m         \u001b[0mStop\u001b[0m \u001b[0mthe\u001b[0m \u001b[0mparent\u001b[0m \u001b[0mroslaunch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \"\"\"\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_stop_infrastructure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/ros/melodic/lib/python2.7/dist-packages/roslaunch/parent.pyc\u001b[0m in \u001b[0;36m_stop_infrastructure\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    270\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpm\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    271\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshutdown\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 272\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    273\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    274\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mauto_terminate\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python2.7/threading.pyc\u001b[0m in \u001b[0;36mjoin\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    938\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    939\u001b[0m                 \u001b[0;32mwhile\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__stopped\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 940\u001b[0;31m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__block\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    941\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m__debug__\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    942\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_note\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s.join(): thread stopped\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python2.7/threading.pyc\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, timeout)\u001b[0m\n\u001b[1;32m    338\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m    \u001b[0;31m# restore state no matter what (e.g., KeyboardInterrupt)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtimeout\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 340\u001b[0;31m                 \u001b[0mwaiter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0macquire\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    341\u001b[0m                 \u001b[0;32mif\u001b[0m \u001b[0m__debug__\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m                     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_note\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s.wait(): got it\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "/home/ilan/catkin_ws/src/stonefish_scene_generator/launch/audo_generated.launch\n"
      ]
     }
    ],
@@ -248,13 +214,56 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### run"
+    "### edit/make launch file"
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 34,
+   "source": [
+    "rate = 300.0\n",
+    "resolution = (1200, 800)\n",
+    "maker = LaunchFileMaker(scene_file_path, rate, resolution)\n",
+    "maker.save_to_file(launch_file_path)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### setup simulation"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "source": [
+    "controller = SimulationController(launch_file_path)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "... logging to /home/ilan/.ros/log/36922322-2778-11ec-ab95-a08cfdc4e9f4/roslaunch-ilan-img-ubuntu-32135.log\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### launch simulation"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "source": [
     "controller.run()\n",
     "controller.wait_for_ros()"
@@ -264,14 +273,14 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\u001b[1mstarted roslaunch server http://zeged-System-Product-Name:42035/\u001b[0m\n",
+      "\u001b[1mstarted roslaunch server http://ilan-img-ubuntu:37665/\u001b[0m\n",
       "\n",
       "SUMMARY\n",
       "========\n",
       "\n",
       "PARAMETERS\n",
       " * /rosdistro: melodic\n",
-      " * /rosversion: 1.14.11\n",
+      " * /rosversion: 1.14.10\n",
       "\n",
       "NODES\n",
       "  /\n",
@@ -279,14 +288,43 @@
       "    rviz (rviz/rviz)\n",
       "    stonefish_simulator (stonefish_ros/parsed_simulator)\n",
       "\n",
+      "auto-starting new master\n",
+      "\u001b[1mprocess[master]: started with pid [4244]\u001b[0m\n",
       "\u001b[1mROS_MASTER_URI=http://localhost:11311\u001b[0m\n",
-      "\u001b[1mprocess[stonefish_simulator-31]: started with pid [4984]\u001b[0m\n",
-      "\u001b[1mprocess[rviz-32]: started with pid [4985]\u001b[0m\n",
-      "\u001b[1mprocess[rosbag_record_cam-33]: started with pid [4991]\u001b[0m\n",
-      "[INFO] [1633550964.151756]: started\n",
-      "[rosbag_record_cam-33] killing on exit\n",
-      "[rviz-32] killing on exit\n",
-      "[stonefish_simulator-31] killing on exit\n"
+      "\u001b[1msetting /run_id to 36922322-2778-11ec-ab95-a08cfdc4e9f4\u001b[0m\n",
+      "\u001b[1mprocess[rosout-13]: started with pid [4255]\u001b[0m\n",
+      "started core service [/rosout]\n",
+      "\u001b[1mprocess[stonefish_simulator-14]: started with pid [4262]\u001b[0m\n",
+      "\u001b[1mprocess[rviz-15]: started with pid [4263]\u001b[0m\n",
+      "\u001b[1mprocess[rosbag_record_cam-16]: started with pid [4269]\u001b[0m\n",
+      "[INFO] [1633615781.495687]: started\n",
+      "[rosbag_record_cam-16] killing on exit\n",
+      "[stonefish_simulator-14] killing on exit\n",
+      "[rviz-15] killing on exit\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "\u001b[31m[stonefish_simulator-14] escalating to SIGTERM\u001b[0m\n",
+      "\u001b[31m[stonefish_simulator-14] escalating to SIGKILL\u001b[0m\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[rosout-13] killing on exit\n",
+      "[master] killing on exit\n"
+     ]
+    },
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "\u001b[31mShutdown errors:\n",
+      " * process[stonefish_simulator-14, pid 4262]: required SIGKILL. May still be running.\u001b[0m\n"
      ]
     }
    ],
