--- a/src/test copy.ipynb
+++ b/src/test copy.ipynb
@@ -50,6 +50,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### cwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cwd = os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### package path"
    ]
   },
@@ -110,7 +126,7 @@
     "    dir_exists = os.path.isdir(path)\n",
     "    if not dir_exists:\n",
     "        os.mkdir(path)\n",
-    "        print('folder created: {}'.format(path))"
+    "        print('data folder created: {}'.format(path))"
    ]
   },
   {
@@ -134,39 +150,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### make a scene"
+    "## make a scene"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_a_scene(category, main_subject):\n",
-    "    scene = None\n",
-    "    title = category + '_' + main_subject\n",
-    "    seabed_depth = 15\n",
-    "    gen = SceneGenerator(seabed_depth)\n",
-    "    gen.add_empty_frame(ColorMap.jet)\n",
-    "    if main_subject == 'box':\n",
-    "        gen.add_boxes()\n",
-    "    else:\n",
-    "        gen.add_reefs()\n",
-    "    scene = gen.generate()\n",
-    "    return scene"
+    "# def make_a_scene(category, main_subject):\n",
+    "#     scene = None\n",
+    "#     title = category + '_' + main_subject\n",
+    "#     seabed_depth = 15\n",
+    "#     gen = SceneGenerator(seabed_depth)\n",
+    "#     gen.add_empty_frame(ColorMap.jet)\n",
+    "#     if main_subject == 'box':\n",
+    "#         gen.add_boxes()\n",
+    "#     else:\n",
+    "#         gen.add_reefs()\n",
+    "#     scene = gen.generate()\n",
+    "#     return scene"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### choose categories"
+    "## categories"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -177,31 +193,32 @@
       "('basic', 'sphere')\n",
       "('basic', 'cylindar')\n",
       "('basic', '2019')\n",
-      "('basic', '2020')\n"
+      "('basic', '2020')\n",
+      "('multiObect', 'box')\n",
+      "('multiObect', 'sphere')\n",
+      "('multiObect', 'cylindar')\n",
+      "('multiObect', '2019')\n",
+      "('multiObect', '2020')\n"
      ]
     }
    ],
    "source": [
-    "categories = []\n",
-    "categories.append('basic')\n",
+    "# categories = []\n",
+    "# categories.append('basic')\n",
     "# categories.append('multiObect')\n",
-    "shapes = []\n",
-    "shapes.append('box')\n",
-    "shapes.append('sphere')\n",
-    "shapes.append('cylindar')\n",
-    "reefs = ['2019', '2020']\n",
-    "for reef in reefs:\n",
-    "    shapes.append(reef)\n",
+    "# shapes = []\n",
+    "# shapes.append('box')\n",
+    "# shapes.append('sphere')\n",
+    "# shapes.append('cylindar')\n",
+    "# reefs = ['2019', '2020']\n",
+    "# for reef in reefs:\n",
+    "#     shapes.append(reef)\n",
     "\n",
-    "test = [categories, shapes]\n",
-    "import itertools\n",
-    "for category, main_subject in list(itertools.product(*test)):\n",
-    "    print(category, main_subject)\n",
-    "    # create category folder\n",
-    "    category_folder_path = os.path.join(data_folder_path, category)\n",
-    "    create_folder(category_folder_path)\n",
-    "    # create a new scene\n",
-    "    scene = make_a_scene(category, main_subject)"
+    "# test = [categories, shapes]\n",
+    "# import itertools\n",
+    "# for category, main_subject in list(itertools.product(*test)):\n",
+    "#     print(category, main_subject)\n",
+    "#     scene = make_a_scene(category, main_subject)"
    ]
   },
   {
